--- a/main.css
+++ b/main.css
@@ -4,17 +4,14 @@
     top:0px;
     bottom:0px;
     left:0px;
-    right:0px
+    right:0px;
 }
 
 #canvas-draft{
     background-color: transparent;
 }
 
-body{
-    overflow:hidden;
-}
-
 #canvas-container{
     height:720px;
+    position: flex;
 }
