--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+/* ------------canvas styling------------- */
+
 .canvas{
     border:1px black dotted;
     position:absolute;
@@ -12,5 +14,45 @@
 }
 
 #canvas-container{
-    height:720px;
+    height:500px;
+}
+
+/* -------------Color picker------------- */
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #e6e6e6;
+}
+h2 {
+  background-color: #dbdbdb;
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 10px;
+  font-family: 'Open Sans';
+}
+#color-input {
+  display: none;
+}
+#color-label {
+  margin-left: 15px;
+  position: absolute;
+  height: 30px;
+  width: 50px;
+}
+#color-input:checked ~ #color-picker {
+  opacity: 1;
+}
+#color-picker {
+  position: absolute;
+  left: 70px;
+  background-color: white;
+  height: 160px;
+  width: 200px;
+  border: solid 1px #ccc;
+  opacity: 0;
+  padding: 5px;
+}
+canvas:hover {
+  cursor: crosshair;
 }
