--- a/main.css
+++ b/main.css
@@ -1,4 +1,9 @@
-/* ------------canvas styling------------- */
+#control-panel{
+    position: absolute;
+    width: 200px;
+    height: 100vh;
+    border: 1px solid black;
+}
 
 .canvas{
     border:1px black dotted;
@@ -10,45 +15,6 @@
 }
 
 #canvas-container{
-    height:500px;
-    position: flex;
-}
-
-/* -------------Color picker------------- */
-
-body {
-  margin: 0;
-  padding: 0;
-}
-h2 {
-  background-color: #dbdbdb;
-  margin: 0;
-  margin-bottom: 15px;
-  padding: 10px;
-  font-family: 'Open Sans';
-}
-#color-input {
-  display: none;
-}
-#color-label {
-  margin-left: 15px;
-  position: absolute;
-  height: 30px;
-  width: 50px;
-}
-#color-input:checked ~ #color-picker {
-  opacity: 1;
-}
-#color-picker {
-  position: absolute;
-  left: 70px;
-  background-color: white;
-  height: 160px;
-  width: 200px;
-  border: solid 1px #ccc;
-  opacity: 0;
-  padding: 5px;
-}
-canvas:hover {
-  cursor: crosshair;
+    position: absolute;
+    left: 200px;
 }
